--- a/project_main/css/board_content.css
+++ b/project_main/css/board_content.css
@@ -4,7 +4,8 @@
 header{
   font-family: "나눔고딕", NanumGothic,Dotum,"돋음",sans-serif;
 }
-/* reco부분 감싸고 있는 박스와 */
+
+/* reco부분 감싸고 있는 박스와 메뉴바부분*/
 .headerbox,.menu,.menu_item{
   margin:0;
   padding:0;
@@ -14,11 +15,15 @@ header{
   color: inherit;
   text-decoration: none;
 }
+
+/* reco있는 오렌지색 박스 */
 .headerbox{
   background-color: orange;
-  height:120px;
- 
+  height:120px; 
 }
+
+
+/* reco 글자 있는 부분 */
 .headertext
 {
   width:1080px;
@@ -31,7 +36,7 @@ header{
   
 }
 
-/* 로그인 고객센터 버튼 있는 곳 감싸는 태그 */
+/* 로그인 고객센터 버튼 있는 곳  */
 .login_item{
   position: absolute;
   top: 20px; 
@@ -55,7 +60,14 @@ header{
   font-weight: bold;
   
 }
+.log_link1{
+  text-decoration: none;
+  
+  /* color: aqua; */
+  color: rgb(78, 67, 67);
+  font-weight: bold;
 
+}
 
 .login li{
   display: table-cell;
@@ -64,13 +76,20 @@ header{
   
 }
 
+
 /* 로그인 회원가입 부분 커서 갖다대면 효과 */
-.log_li:hover .log_link{
-  background-color: skyblue;
+.log_li:hover .log_link {
+  /* background-color: skyblue; */
+  background-color:  #98ff98;
   font-weight: bolder;
   
 }
-
+.log_li:hover .log_link1 {
+  
+  background-color: aqua;
+  font-weight: bolder;
+  
+}
 
 
 
@@ -79,9 +98,11 @@ header{
   color: #000;
 }
 
+
 /* movie food 등 메뉴바  */
 
 /* 메뉴바 회색부분  */
+
 .wrap{
   max-width:2000px;
   margin:14px;
@@ -93,7 +114,7 @@ header{
 .menu{
   display: table;
   table-layout:fixed;
- 
+  /* width:100%; */
   list-style:none;
   width:1080px;
 
@@ -116,13 +137,13 @@ header{
   margin-right:40px;
   text-decoration:none;
 }
-
 /* 메뉴와 관련 */
 .menu_item{
   display: table-cell;
   list-style:none;
  
 }
+
 
 
 .menu_item + .menu_item .menu_link {
@@ -144,69 +165,21 @@ header{
 
 }
 
-/* 컨텐츠의 왼쪽부분, 즉 FAQ등 메뉴 있는 곳 */
-.aside{
-   
-  float: left;
-  width: 11%;
-  background-color: cornsilk;
-  /* height: 100%; */
-  height: 250vh;
-}
-
-/* 왼쪽 FAQ 등 메뉴 있는 부분의 COMMUNITY글자 */
-h2{
-  text-align: center;
-}
 
 
-/* 옆의 메뉴 ui */
-.aisde_menu{
-  list-style:none;
-  text-decoration: none;
-  /* padding-right: 20px; */
-  padding: 20px;
-}
-/* 옆의 메뉴 li */
-.aside_in_menu{
-  border:5px solid lightseagreen;
-  /* padding-left: 10px;
-  padding-right: 10px; */
-  border-radius: 20px;
-  margin-bottom: 70px;
-  font-size: 14px;
-  padding: 17px 18px 16px 18px;
-  cursor: pointer;
-  text-align: -webkit-match-parent;
- 
-}
-.aside_in_menu>a:-webkit-any-link {
-  border: 1px none black; 
-  color: black;
-  text-decoration: none; 
-  font-weight: bolder;
-}
-
-
-
-
-.aside_in_menu:hover .aside_button{
-  color:  brown;
-  font-weight: bolder;
-}
-
-
-
-/* 오른쪽에 있는 컨텐츠 부분 감싸는 태그 */
+/*  컨텐츠 부분 감싸는 태그 */
 .container{
    
+      
   display: block;
-  width: 100%;
-  margin: -100 auto;
-  min-height: 100%;
-  padding: 50px 0;
-  
+  width: 90%;
+  padding-top: 60px;
+  margin: 0 auto;
+ 
   position: relative;
+  height: 230vh;
+  border-left: 5px dotted orange;
+  border-right: 5px dotted orange;
      
         
 }
@@ -223,15 +196,18 @@ h2{
     right: 100px;
 }
 
-/* 컨텐츠의 오른쪽부분  */
+
+
+
+
+/* 컨텐츠 부분  */
 .contents{
-    float: left;
-    
-    width: 89%;
-    background-color: #fff;
-    border-left: 5px dotted orange;
-    height: 250vh;
-    box-sizing: border-box;
+  width: 90%;
+  background-color: #fff;
+  
+  height: 100vh;
+  box-sizing: border-box;
+  margin: 0 auto;
     
     
 }
@@ -264,16 +240,48 @@ h2{
 .community_contents td{
     border-top: 1px solid lightgray;
 }
+/* 목록으로 버튼, 추천 버튼 감싸는 태그 */
+.comment_menu{
+  margin-top: 20px;
+  margin-left: 1020px;
+  margin-bottom: 30px;
+}
 
-  
-/* 댓글부분 */
 /* 이전글, 다음글과 댓글부분 전체 감싸는 틀 */
 .comment_contents{
   text-align: center;
+  /* border:1px solid gray; */
+    
+  margin:0 auto;
+  padding-top: 10px;
+  width: 95%;
+  font-size: 15px;
+  /* height: 70vh; */
+  /* border-left: 1px dotted lightgray; */
+  /* border-right: 1px dotted lightgray; */
+  border-bottom: 1px dotted lightgray;
+  border-top: none;
+  
+}
+
+.comment_contents td{
+  border-top: 1px dotted lightgray;
+}
+
+
+/* 이전글, 다음글 a href 밑줄 없애고 검은색으로 지정 */
+.comment_href{
+  text-decoration:  none !important;
+  color: #000;
+}
+
+/* 전체 글 보기 */
+#h4{
+  text-align: right;
 }
 
 /* 댓글부분 */
-ul li{
+.reply_ul .reply .re_reply{
   list-style: none;
   border-bottom: 1px dotted silver;
   
@@ -312,7 +320,7 @@ ul li{
     
    
 }
-
+/* 댓글 쓰기란 */
 .comment{
   -webkit-appearance: none;
   text-rendering: auto;
@@ -330,7 +338,7 @@ ul li{
     font-size: 100%;
     
 }
-
+/* 댓글쓰기 감싸는 div와 댓글 부분  */
 .comment_form .comment{
   display: block;
     width: 90%;
@@ -342,6 +350,28 @@ ul li{
 
     margin-top: 20px;
 }
+
+/* 댓글 닉네임 있는 부분 감싼 태그 */
+comment_nickname {
+  overflow: hidden;
+  position: absolute;
+  top: 11px;
+  right: 82px;
+  bottom: 0;
+  left: 15px;
+  height: 23px;
+  font-size: 12px;
+  color: #000;
+  font-weight: 700;
+  line-height: 2.08;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+/* 댓글 닉네임 있는 부분  */
+comment_nickname_span{
+  left: 1000px;
+}
+/* 댓글달기 버튼 */
 .comment_button{
   margin-top: 5px;
   margin-left: 67px;
@@ -354,8 +384,8 @@ ul li{
  
   
 }
-
-li{
+/* 대댓글부분 */
+.re_reply{
   font-family: applesdgothicneo-light;
     margin-top: 4px;
     overflow: hidden;
@@ -367,65 +397,44 @@ li{
     display: list-item;
    
 }
+/* 댓글부분 */
+.reply{
+  font-family: applesdgothicneo-light;
+    margin-top: 4px;
+    overflow: hidden;
+    display: block;
+    line-height: 1.5;
+    color: #666;
+    padding: 13px 15px 12px;
+    min-height: 30px;
+    display: list-item;
+   
 
+}
+
+/* 댓글달기 버튼 */
 .comment_submit{
   font-size: 15px;
   cursor: pointer;
 
 }
 
-.comment_menu{
-  margin-top: 20px;
-  margin-left: 1100px;
-  margin-bottom: 30px;
-}
-
-.comment_contents{
-  border:1px solid gray;
-    
-  margin:0 auto;
-  
-  width: 90%;
-  font-size: 15px;
-  /* height: 70vh; */
-
-}
-.comment_contents{
-  border-left: 1px dotted lightgray;
-  border-right: 1px dotted lightgray;
-  border-bottom: 1px dotted lightgray;
-  border-top: none;
-}
-
-.comment_contents td{
-  border-top: 1px dotted lightgray;
-}
- 
-
-
-
-
-
-
 
 /* footer부분  */
 footer{
-
+  position: relative;
   width:100%;
   text-align:center;
-  flex-direction:column_reverse;
-  overflow:scroll;
+  /* margin-bottom:30px;
+  margin-top: 30px; */
+  margin: 0 auto;
 }
 address{
   color:gray;
   font-style: normal;
 }
 
-/* 위쪽은 캘린더와 동일  */
-html,body, section{
-    height: 100%;
 
-} 
 
 
 
