--- a/project_main/css/board_write.css
+++ b/project_main/css/board_write.css
@@ -3,6 +3,8 @@
 header{
   font-family: "나눔고딕", NanumGothic,Dotum,"돋음",sans-serif;
 }
+
+/* reco부분 감싸고 있는 박스와 메뉴바부분*/
 .headerbox,.menu,.menu_item{
   margin:0;
   padding:0;
@@ -12,14 +14,15 @@ header{
   color: inherit;
   text-decoration: none;
 }
+
+/* reco있는 오렌지색 박스 */
 .headerbox{
   background-color: orange;
-  height:120px;
-  /* margin:0 auto; */
- /* text-align: center; */
-  
-  
+  height:120px; 
 }
+
+
+/* reco 글자 있는 부분 */
 .headertext
 {
   width:1080px;
@@ -40,6 +43,8 @@ header{
   
   padding-right: 0.05px;
 }
+
+/* 로그인 회원 가입 버튼 있는 곳 감싸는 ul태그  */
 .login{
   list-style:none;
   margin:0;
@@ -47,23 +52,55 @@ header{
   display: table;
   text-decoration: none;
 }
+/* 로그인 회원 가입 각 버튼  */
 .log_link{
   text-decoration: none;
   color: #000;
   font-weight: bold;
   
 }
+.log_link1{
+  text-decoration: none;
+  
+  /* color: aqua; */
+  color: rgb(78, 67, 67);
+  font-weight: bold;
+
+}
+
 .login li{
   display: table-cell;
   padding-right: 30px;
   
   
 }
+
+
+/* 로그인 회원가입 부분 커서 갖다대면 효과 */
+.log_li:hover .log_link {
+  /* background-color: skyblue; */
+  background-color:  #98ff98;
+  font-weight: bolder;
+  
+}
+.log_li:hover .log_link1 {
+  
+  background-color: aqua;
+  font-weight: bolder;
+  
+}
+
+
+
 .link{
   text-decoration: none;
   color: #000;
 }
 
+
+/* movie food 등 메뉴바  */
+
+/* 메뉴바 회색부분  */
 
 .wrap{
   max-width:2000px;
@@ -99,22 +136,21 @@ header{
   margin-right:40px;
   text-decoration:none;
 }
-
-
-/* 로그인 회원가입 부분 커서 갖다대면 효과 */
-.log_li:hover .log_link{
-  background-color: skyblue;
-  font-weight: bolder;
-  
+/* 메뉴와 관련 */
+.menu_item{
+  display: table-cell;
+  list-style:none;
+ 
 }
 
-/* 메뉴와 관련 */
+
+
 .menu_item + .menu_item .menu_link {
     margin-left: 14px;
 }
 
 
-
+/* 메뉴바 커서 대면 효과 */
 .menu_item:hover .menu_link {
     font-weight: bold;
     border-color: #454545;
@@ -122,7 +158,7 @@ header{
 }
 
 
-
+/* 메뉴바 커서 대면 효과 */
 .menu_item:hover .yellow {
     background-color: gray;
 
@@ -130,44 +166,46 @@ header{
 
 
 
-
+/* 오른쪽에 있는 컨텐츠 부분 감싸는 태그 */
 .container{
    
   display: block;
-  width: 100%;
-  margin: -100 auto;
-  min-height: 100%;
-  padding: 50px 0;
-  box-sizing: border-box;
+  width: 95%;
+  
+  margin: 0 auto;
+ 
   position: relative;
+  height: 120vh;
+  border-left: 5px dotted orange;
+  border-right: 5px dotted orange;
+     
      
      
     
 }
-.container:after{
-    display: block;
-    clear: both;
-    content: '';
-    /* width: 100%; */
-    position: absolute;
-    top: 100px;
-    bottom: 100px;
-    right: 100px;
-}
-.wrap_div:after{
-    display: block;
-    clear: both;
-    content: "";
 
+.container:after{
+  display: block;
+  clear: both;
+  content: '';
+  /* width: 100%; */
+  position: absolute;
+  top: 100px;
+  bottom: 100px;
+  right: 100px;
+  
 }
+
+
+
+/* 컨텐츠의 부분  */
 .contents{
-  float: left;
-  /* height: 300px%; */
-  width: 89%;
+  width: 90%;
   background-color: #fff;
-  border-left: 5px dotted orange;
-  height: 140vh;
+  
+  height: 100vh;
   box-sizing: border-box;
+  margin: 0 auto;
   
   
 }
@@ -177,131 +215,41 @@ header{
   content: '';
 }
 
-.aside{
- 
-  float: left;
-  width: 11%;
-  background-color: cornsilk;
-  /* height: 100%; */
-  height: 140vh;
-  
- 
-  
 
-
-}
-
+/* COMMUNITY 글씨 있는 부분 */
 h2{
   text-align: center;
 }
 
-/* 옆의 메뉴 ui */
-.aisde_menu{
-  list-style:none;
-  text-decoration: none;
-  /* padding-right: 20px; */
-  padding: 20px;
-}
-/* 옆의 메뉴 li */
-.aside_in_menu{
-  border:5px solid lightseagreen;
-  /* padding-left: 10px;
-  padding-right: 10px; */
-  border-radius: 20px;
-  margin-bottom: 70px;
-  font-size: 14px;
-  padding: 17px 18px 16px 18px;
-  cursor: pointer;
-  text-align: -webkit-match-parent;
- 
-}
-.aside_in_menu>a:-webkit-any-link {
-  border: 1px none black; 
-  color: black;
-  text-decoration: none; 
-  font-weight: bolder;
-}
-
-
-.aside_in_menu:hover .aside_button{
-  color:  brown;
-  font-weight: bolder;
-}
-
-
-.contents_info{
-  border:1px solid gray;
-    
-  margin:0 auto;
-  text-align: center;
-  width: 100%;
-  font-size: 20px;
-  text-align: center;
-
-}
-
-.community_contents{
-  border:1px solid gray;
-    
-  margin:0 auto;
-  text-align: center;
-  width: 100%;
-  font-size: 20px;
-
-}
-/* table{
-  border:1px solid gray;
-    
-  margin:0 auto;
-  text-align: center;
-  width: 100%;
-  font-size: 20px;
-} */
-
+/* 자유게시판 글 쓰는 부분의 TD */
 td{
     border-top: 1px solid lightgray;
 }
-.menu_wrap{
-    max-width:2000px;
-    margin:200px;
-    margin:0 auto;
-    background-color: lightgray;
-    display: block;
-  
-  }
-  .com_menu{
-    display: table;
-    table-layout:fixed;
-    /* width:100%; */
-    list-style:none;
-    width:1080px;
-  
-  }
-  
-  .menu_item{
-    display: table-cell;
-    list-style:none;
-   
-  }
 
-
-/*  */
-
+/* 검색하는 부분 */
 .search{
-  margin-left:960px;
-  margin-bottom: 10px;
-  margin-top: 10px;
+  margin-left:850px;
+  margin-bottom: 20px;
+  margin-top: 20px;
   
 }
 
-h1{
-  text-align: center;
+/* 분류하는 부분과 글 쓰는 부분 싸는 태그 */
+fieldset{
+  width: 90%;
+  margin-left: 15px;
+ 
 }
+/* 분류하는 부분 */
+select{
+  font-size: 15px;
 
-
-
-
-
+}
+/* 등록하는 버튼 */
+.total_submit{
+ float: right;
+ font-size: 15px;
+}
 /* footer부분  */
 footer{
   position: relative;
@@ -311,61 +259,14 @@ footer{
   margin-top: 30px;
 }
 
-
+/* 주소있는 부분 */
 address{
   color:gray;
   font-style: normal;
 }
 
-/* 위쪽은 캘린더와 동일  */
-html,body, section{
-    height: 100%;
-
-} 
 
 
-/* .contents_fieldset{
-    
-        border:1px solid gray;
-          
-        margin:0 auto;
-        text-align: center;
-        width: 80px;
-        font-size: 20px;
-        text-align: center;
-        
-      
-      
-} */
 
-/* fieldset{
-  width: 20vh;
-} */
-/* fieldset{
-  max-width: 20px;
-}
-table{
-  width: 10px;
-}
-
-textarea{} */
-
-/* #input_text{
-  size: 80px;
-  
-} */
-
-fieldset{
-  width: 80%;
- margin-left: 15px;
- /* box-sizing: border-box; */
- /* min-height: 100vh; */
-  /* height: 80%; */
-}
-
-select{
-  font-size: 15px;
-
-}
 
 
