--- a/project_main/css/board.css
+++ b/project_main/css/board.css
@@ -3,6 +3,7 @@
 header{
   font-family: "나눔고딕", NanumGothic,Dotum,"돋음",sans-serif;
 }
+/* reco부분 감싸고 있는 박스와 메뉴바부분*/
 .headerbox,.menu,.menu_item{
   margin:0;
   padding:0;
@@ -36,7 +37,7 @@ header{
   
 }
 
-/* 로그인 고객센터 버튼 있는 곳  */
+/* 로그인 고객센터 버튼 있는 곳 감싸는 태그 */
 .login_item{
   position: absolute;
   top: 20px; 
@@ -44,6 +45,7 @@ header{
   
   padding-right: 0.05px;
 }
+/* 로그인 회원 가입 버튼 있는 곳 감싸는 ul태그  */
 .login{
   list-style:none;
   margin:0;
@@ -51,23 +53,53 @@ header{
   display: table;
   text-decoration: none;
 }
+
+/* 로그인 회원 가입 각 버튼  */
 .log_link{
   text-decoration: none;
   color: #000;
   font-weight: bold;
   
 }
+.log_link1{
+  text-decoration: none;
+  
+  
+  color: rgb(78, 67, 67);
+  font-weight: bold;
+
+}
+
+
 .login li{
   display: table-cell;
   padding-right: 30px;
   
   
 }
+/* 로그인 회원가입 부분 커서 갖다대면 효과 */
+.log_li:hover .log_link{
+  background-color: skyblue;
+  font-weight: bolder;
+  
+}
+
+.log_li:hover .log_link1 {
+  /* background-color:  #98ff98; */
+  /* background-color: skyblue; */
+  /* background-color: cadetblue; */
+  background-color: aqua;
+  font-weight: bolder;
+  
+}
+
 .link{
   text-decoration: none;
   color: #000;
 }
+/* movie food 등 메뉴바  */
 
+/* 메뉴바 회색부분  */
 
 .wrap{
   max-width:2000px;
@@ -85,7 +117,7 @@ header{
   width:1080px;
 
 }
-
+/* 메뉴와 관련 */
 .menu_item{
   display: table-cell;
   list-style:none;
@@ -105,20 +137,23 @@ header{
 }
 
 
-/* 로그인 회원가입 부분 커서 갖다대면 효과 */
-.log_li:hover .log_link{
-  background-color: skyblue;
-  font-weight: bolder;
-  
-}
+
 
 /* 메뉴와 관련 */
+
+
+.menu_item{
+  display: table-cell;
+  list-style:none;
+ 
+}
+
 .menu_item + .menu_item .menu_link {
     margin-left: 14px;
 }
 
 
-
+/* 메뉴바 커서 대면 효과 */
 .menu_item:hover .menu_link {
     font-weight: bold;
     border-color: #454545;
@@ -126,7 +161,7 @@ header{
 }
 
 
-
+/* 메뉴바 커서 대면 효과 */
 .menu_item:hover .yellow {
     background-color: gray;
 
@@ -135,16 +170,18 @@ header{
 
 
 
+/* 컨텐츠 부분 감싸는 태그 */
 .container{
    
   display: block;
-  width: 100%;
-  margin: -100 auto;
-  min-height: 100%;
-  padding: 50px 0;
+  width: 90%;
+  
+  margin: 0 auto;
   /* box-sizing: border-box; */
   position: relative;
-     
+  height: 120vh;
+  border-left: 5px dotted orange;
+  border-right: 5px dotted orange;
      
     
 }
@@ -158,20 +195,18 @@ header{
     bottom: 100px;
     right: 100px;
 }
-/* .wrap_div:after{
-    display: block;
-    clear: both;
-    content: "";
 
-} */
+
+/* 컨텐츠 부분  */
 .contents{
-  float: left;
-  /* height: 300px%; */
-  width: 89%;
+ 
+  width: 90%;
   background-color: #fff;
-  border-left: 5px dotted orange;
+  
   height: 100vh;
   box-sizing: border-box;
+  margin: 0 auto;
+  
   
   
 }
@@ -181,60 +216,12 @@ header{
   content: '';
 }
 
-.aside{
- 
-  float: left;
-  width: 11%;
-  background-color: cornsilk;
-  /* height: 100%; */
-  height: 100vh;
-  
- 
-  
 
-
-}
-
-h2{
+/* 자유 게시판 이라고 글자*/
+h1{
   text-align: center;
 }
-
-/* 옆의 메뉴 ui */
-.aisde_menu{
-  list-style:none;
-  text-decoration: none;
-  /* padding-right: 20px; */
-  padding: 20px;
-}
-/* 옆의 메뉴 li */
-.aside_in_menu{
-  border:5px solid lightseagreen;
-  /* padding-left: 10px;
-  padding-right: 10px; */
-  border-radius: 20px;
-  margin-bottom: 70px;
-  font-size: 14px;
-  padding: 17px 18px 16px 18px;
-  cursor: pointer;
-  text-align: -webkit-match-parent;
- 
-}
-.aside_in_menu>a:-webkit-any-link {
-  border: 1px none black; 
-  color: black;
-  text-decoration: none; 
-  font-weight: bolder;
-}
-
-
-
-
-.aside_in_menu:hover .aside_button{
-  color:  brown;
-  font-weight: bolder;
-}
-
-
+/* 자유게시판 글 성격 설명하는 곳 */
 .contents_info{
   border:1px solid gray;
     
@@ -245,7 +232,7 @@ h2{
   text-align: center;
 
 }
-
+/* 자유게시판 컨텐츠 부분 */
 .community_contents{
   border:1px solid gray;
     
@@ -255,48 +242,13 @@ h2{
   font-size: 20px;
 
 }
-/* table{
-  border:1px solid gray;
-    
-  margin:0 auto;
-  text-align: center;
-  width: 100%;
-  font-size: 20px;
-} */
 
+/* 자유게시판 컨텐츠 부분의 td */
 td{
     border-top: 1px solid lightgray;
 }
-.menu_wrap{
-    max-width:2000px;
-    margin:200px;
-    margin:0 auto;
-    background-color: lightgray;
-    display: block;
-  
-  }
-  .com_menu{
-    display: table;
-    table-layout:fixed;
-    /* width:100%; */
-    list-style:none;
-    width:1080px;
-  
-  }
-  
-  .menu_item{
-    display: table-cell;
-    list-style:none;
-   
-  }
 
-
-/* .button{
-  font-size: 40px;
-} */
-/* .community_button{
-  margin: 0px;
-} */
+/* 전체, 잡담 정보 기타 메뉴 버튼 */
 #total{
   margin-left: 4px;
   font-size: 20px;
@@ -304,6 +256,7 @@ td{
   margin-right: -4px;
   /* padding: 0px; */
 }
+/* 전체, 잡담 정보 기타 메뉴 버튼 */
 #chat{
   width:25%;
   font-size: 20px;
@@ -311,29 +264,30 @@ td{
   /* padding: 0px; */
  
 }
+
+/* 전체, 잡담 정보 기타 메뉴 버튼 */
 #info{
   width: 25%;
   margin: -4px;
   /* padding: 0px; */
   font-size: 20px;
 }
+
+/* 전체, 잡담 정보 기타 메뉴 버튼 */
 #others{
   width: 25%;
   margin: -4px;
   /* padding: 0px; */
   font-size: 20px;
 }
-
+/* 검색부분 */
 .search{
-  margin-left:960px;
-  margin-bottom: 10px;
-  margin-top: 10px;
+  margin-left:850px;
+  margin-bottom: 20px;
+  margin-top: 20px;
   
 }
 
-h1{
-  text-align: center;
-}
 
 
 
@@ -344,17 +298,13 @@ footer{
   position: relative;
   width:100%;
   text-align:center;
-  margin-bottom:30px;
-  margin-top: 30px;
+  /* margin-bottom:30px;
+  margin-top: 30px; */
+  margin: 0 auto;
 }
 address{
   color:gray;
   font-style: normal;
 }
 
-/* 위쪽은 캘린더와 동일  */
-html,body, section{
-    height: 100%;
-
-} 
 
