--- a/project_main/css/canlendar.css
+++ b/project_main/css/canlendar.css
@@ -1,7 +1,11 @@
 @charset "UTF-8";
+
+/* 헤더부분 reco이름부분 */
 header{
   font-family: "나눔고딕", NanumGothic,Dotum,"돋음",sans-serif;
 }
+
+/* reco부분 감싸고 있는 박스와 메뉴바부분*/
 .headerbox,.menu,.menu_item{
   margin:0;
   padding:0;
@@ -11,6 +15,8 @@ header{
   color: inherit;
   text-decoration: none;
 }
+
+/* reco있는 오렌지색 박스 */
 .headerbox{
   background-color: orange;
   height:120px;
@@ -30,7 +36,7 @@ header{
   text-align: center;
   
 }
-
+/* 로그인 고객센터 버튼 있는 곳 감싸는 태그 */
 .login_item{
   position: absolute;
   top: 20px; 
@@ -38,6 +44,8 @@ header{
   
   padding-right: 0.05px;
 }
+
+/* 로그인 회원 가입 버튼 있는 곳 감싸는 ul태그  */
 .login{
   list-style:none;
   margin:0;
@@ -45,11 +53,23 @@ header{
   display: table;
   text-decoration: none;
 }
+
+/* 로그인 회원 가입 각 버튼  */
 .log_link{
   text-decoration: none;
   color: #000;
   font-weight: bold;
   
+}
+
+
+.log_link1{
+  text-decoration: none;
+  
+  /* color: aqua; */
+  color: rgb(78, 67, 67);
+  font-weight: bold;
+
 }
 .login li{
   display: table-cell;
@@ -61,19 +81,8 @@ header{
   text-decoration: none;
   color: #000;
 }
-/* .headertext
-{
-  width:1080px;
 
-  font-weight: bold;
-  font-size: 100px;
-  color: #fff;
-  padding-left: 500px;
-  /* padding-right: 0 auto; */
-  /* margin: 0 auto;
-  
-} */ 
-
+/* 메뉴바 회색부분  */
 .wrap{
   max-width:2000px;
   margin:14px;
@@ -82,6 +91,8 @@ header{
   
 
 }
+
+/* 메뉴바 */
 .menu{
   display: table;
   table-layout:fixed;
@@ -90,7 +101,7 @@ header{
   width:1080px;
 
 }
-
+/* 메뉴와 관련 */
 .menu_item{
   display: table-cell;
   list-style:none;
@@ -117,12 +128,18 @@ header{
   
 }
 
+.log_li:hover .log_link1 {
+  
+  background-color: aqua;
+  font-weight: bolder;
+  
+}
 .menu_item + .menu_item .menu_link {
     margin-left: 14px;
 }
 
 
-
+/* 메뉴바 커서 대면 효과 */
 .menu_item:hover .menu_link {
     font-weight: bold;
     border-color: #454545;
@@ -130,7 +147,7 @@ header{
 }
 
 
-
+/* 메뉴바 커서 대면 효과 */
 .menu_item:hover .yellow {
     background-color: gray;
 
@@ -138,27 +155,8 @@ header{
 
 
 
+/* 캘린더 부분  start*/
 
-footer{
-  position: relative;
-  width:100%;
-  text-align:center;
-  margin-bottom:30px;
-  margin-top: 30px;
-}
-address{
-  color:gray;
-  font-style: normal;
-}
-
-
-/* 캘린더 부분 */
-/* * {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-  box-sizing: border-box;
-} */
   
 .body {
   display: flex;
@@ -264,6 +262,24 @@ color: #396EE2;
   transform: translate(-50%, -50%);
   content: '';
 }
+
+/* 캘린더 부분  end*/
+
+
+
+footer{
+  position: relative;
+  width:100%;
+  text-align:center;
+  /* margin-bottom:30px;
+  margin-top: 30px; */
+  margin: 0 auto;
+}
+address{
+  color:gray;
+  font-style: normal;
+}
+
 
 
 
