--- a/project_main/css/change_password.css
+++ b/project_main/css/change_password.css
@@ -1,42 +1,9 @@
-.link1{
-    text-decoration:none;
-    font-size: 14px;
-   
-
-
-} 
-
-#password_btn{
-    margin-left: 50px;
-
-}
-
-#signup_btn{  
-    
-    margin-left: 60px;
-}
-
-
-a{
-    text-decoration-line: none;
-}
-
+/* 겉 테두리 */
 fieldset{
     margin: 0px auto;
 }
 
-footer{
-    position: relative;
-    width:100%;
-    text-align:center;
-    margin-bottom:30px;
-    margin-top: 30px;
-  }
-  address{
-    color:gray;
-    font-style: normal;
-  }
-  
+/* 버튼부분 */
 button{
   border-radius:20%;
   width: 210px;
@@ -49,7 +16,7 @@ button{
 }
 
 
-
+/* 이메일 입력란 */
 input{
     margin-top: 30px;
     text-align: center;
