--- a/project_main/css/main.css
+++ b/project_main/css/main.css
@@ -1,7 +1,10 @@
 @charset "UTF-8";
+
+/* 헤더부분 reco이름부분 */
 header{
   font-family: "나눔고딕", NanumGothic,Dotum,"돋음",sans-serif;
 }
+/* reco부분 감싸고 있는 박스와 메뉴바부분*/
 .headerbox,.menu,.menu_item{
   margin:0;
   padding:0;
@@ -11,6 +14,7 @@ header{
   color: inherit;
   text-decoration: none;
 }
+/* reco있는 오렌지색 박스 */
 .headerbox{
   background-color: orange;
   height:120px;
@@ -18,39 +22,8 @@ header{
   
 }
 
-.login_item{
-  position: absolute;
-  top: 20px; 
-  right: 1%;
-  
-  padding-right: 0.05px;
-}
-.login{
-  list-style:none;
-  margin:0;
-  padding:0;
-  display: table;
-  text-decoration: none;
-}
-.log_link{
-  text-decoration: none;
-  color: #000;
-  font-weight: bold;
-  
-}
-.login li{
-  display: table-cell;
-  padding-right: 30px;
-  
-  
-}
-.link{
-  text-decoration: none;
-  color: #000;
-}
 
-
-
+/* reco 글자 있는 부분 */
 .headertext
 {
   width:1080px;
@@ -63,6 +36,69 @@ header{
   
 }
 
+/* RECO클릭시 메인으로 링크 */
+.link{
+  text-decoration: none;
+  color: #000;
+}
+/* 로그인 고객센터 버튼 있는 곳 감싸는 태그 */
+.login_item{
+  position: absolute;
+  top: 20px; 
+  right: 1%;
+  
+  padding-right: 0.05px;
+}
+/* 로그인 회원 가입 버튼 있는 곳 감싸는 ul태그  */
+.login{
+  list-style:none;
+  margin:0;
+  padding:0;
+  display: table;
+  text-decoration: none;
+}
+/* 로그인 회원 가입 각 버튼  */
+.log_link{
+  text-decoration: none;
+  color: #000;
+  font-weight: bold;
+  
+}
+
+.log_link1{
+  text-decoration: none;
+  
+  /* color: aqua; */
+  color: rgb(78, 67, 67);
+  font-weight: bold;
+
+}
+
+/* 로그인 회원 가입 각 버튼  */
+.login li{
+  display: table-cell;
+  padding-right: 30px;
+  
+  
+}
+
+/* 로그인 회원가입 부분 커서 갖다대면 효과 */
+.log_li:hover .log_link{
+  background-color: skyblue;
+  font-weight: bolder;
+  
+}
+.log_li:hover .log_link1 {
+  
+  background-color: aqua;
+  font-weight: bolder;
+  
+}
+
+
+/* movie food 등 메뉴바  */
+
+/* 메뉴바 회색부분  */
 .wrap{
   max-width:2000px;
   margin:14px;
@@ -99,8 +135,21 @@ header{
 }
 
 
+.menu_item:hover .yellow {
+    background-color: gray;
 
+}
 
+.menu_item + .menu_item .menu_link {
+  margin-left: 14px;
+}
+.menu_item:hover .menu_link {
+  font-weight: bold;
+  border-color: #454545;
+
+}
+
+/* 앨범 5개 전체 감싸는 태그 */
 .title_list{
   width:980px;
   margin: 0 auto;
@@ -108,6 +157,12 @@ header{
   text-align: center;
 }
 
+/* 각각의 앨범 전체를 감싸는 태그 */
+.title_list{
+  margin-top: 90px;
+}
+
+/* 각각의 앨범 전체를 감싸는 태그의 li */
 .title_list li{
   list-style: none;
   float:left;
@@ -119,12 +174,28 @@ header{
   border-radius: 50%;
 
 }
+
+
+/* 각 앨범 그림 있는 부분을 감싸는 링크 */
+.title_wrap{
+  position: relative;
+}
+
+
+
+
+#title5{
+ float: initial;
+} 
+
+
+
 .title_list li:nth-child(4n) {
   margin-right: 0;
 
 }
 
-
+/* 앞에 보여지는 앨범 이름 */
 .title_front{
   font-size: 25px;
   width:250px;
@@ -141,27 +212,15 @@ header{
 }
 
 
-
-
-.title_wrap{
-  position: relative;
-}
-
+/* 그림에 커서가 놓일 때 hover되는 것 */
 .title_wrap:hover .hidden_title{
   position: absolute;
   display: block;
 }
 
-.title_list{
-  margin-top: 90px;
-}
-
-.item_link{
-  text-decoration: none;
-  color: white;
-}
 
 
+/* 앨범 커서 놓았을 때 보이는 앨범 이름 감싸는 부분*/
 .hidden_title{
   text-decoration:none;
   position: absolute;
@@ -174,14 +233,14 @@ header{
   display: none;
   z-index: 6;
 }
-
+/* 앨범 커서 놓았을 때 보이는 앨범 이름 감싸는 부분*/
 .title_detail{
   text-decoration: none;
 }
 
 
 
-
+/* 앨범 커서 놓았을 때 보이는 앨범 이름 부분*/
 .title_name{
   position: relative;
   font-size: 50px;
@@ -191,49 +250,7 @@ header{
 
 
 
-.menu_item + .menu_item .menu_link {
-    margin-left: 14px;
-}
-
-.title_wrap{
-   position: relative;
-   /* position: absolute; */
-}
-
-
-
-
-
-.itembar{
-  font-weight: bold;
-  border-bottom: 1px solid #454545;
-  font-size:20px;
-  color:#000;
-  width:1000px;
-  margin: 40px;
-}
-
-
-.menu_item:hover .menu_link {
-    font-weight: bold;
-    border-color: #454545;
-
-}
-
-
-/* 로그인 회원가입 부분 커서 갖다대면 효과 */
-.log_li:hover .log_link{
-  background-color: skyblue;
-  font-weight: bolder;
-  
-}
-.menu_item:hover .yellow {
-    background-color: gray;
-
-}
-
-
-
+/* footer부분 */
 
 footer{
   position: relative;
@@ -255,6 +272,3 @@ img{
 
 
 
-#title5{
-  float: initial;
-} 
