--- a/project_main/css/my_community.css
+++ b/project_main/css/my_community.css
@@ -1,7 +1,11 @@
 @charset "UTF-8";
+
+/* 헤더부분 reco이름부분 */
 header{
   font-family: "나눔고딕", NanumGothic,Dotum,"돋음",sans-serif;
 }
+
+/* reco부분 감싸고 있는 박스와 메뉴바부분*/
 .headerbox,.menu,.menu_item{
   margin:0;
   padding:0;
@@ -11,45 +15,17 @@ header{
   color: inherit;
   text-decoration: none;
 }
+
+/* reco있는 오렌지색 박스 */
 .headerbox{
   background-color: orange;
   height:120px;
   text-align: center;
   margin: 0 auto;
-  
-  
+
 }
 
-.login_item{
-  position: absolute;
-  top: 20px; 
-  right: 1%;
-  
-  padding-right: 0.05px;
-}
-.login{
-  list-style:none;
-  margin:0;
-  padding:0;
-  display: table;
-  text-decoration: none;
-}
-.log_link{
-  text-decoration: none;
-  color: #000;
-  font-weight: bold;
-  
-}
-.login li{
-  display: table-cell;
-  padding-right: 30px;
-  
-  
-}
-.link{
-  text-decoration: none;
-  color: #000;
-}
+/* reco 글자 있는 부분 */
 .headertext
 {
   width:1080px;
@@ -61,11 +37,71 @@ header{
   text-align: center;
   
 }
-hr{
-   
-    border: solid 2px;
+
+.link{
+  text-decoration: none;
+  color: #000;
 }
 
+/* 로그인 고객센터 버튼 있는 곳 감싸는 태그 */
+.login_item{
+  position: absolute;
+  top: 20px; 
+  right: 1%;
+  
+  padding-right: 0.05px;
+}
+
+/* 로그인 회원 가입 버튼 있는 곳 감싸는 ul태그  */
+.login{
+  list-style:none;
+  margin:0;
+  padding:0;
+  display: table;
+  text-decoration: none;
+}
+
+/* 로그인 회원 가입 각 버튼  */
+.log_link{
+  text-decoration: none;
+  color: #000;
+  font-weight: bold;
+  
+}
+.log_link1{
+  text-decoration: none;
+  
+  /* color: aqua; */
+  color: rgb(78, 67, 67);
+  font-weight: bold;
+
+}
+.login li{
+  display: table-cell;
+  padding-right: 30px;
+  
+  
+}
+
+/* 로그인 회원가입 부분 커서 갖다대면 효과 */
+.log_li:hover .log_link{
+  background-color: skyblue;
+  font-weight: bolder;
+  
+}
+
+.log_li:hover .log_link1 {
+  
+  background-color: aqua;
+  font-weight: bolder;
+  
+}
+
+
+
+/* movie food 등 메뉴바  */
+
+/* 메뉴바 회색부분  */
 .wrap{
   max-width:2000px;
   margin:14px;
@@ -100,37 +136,60 @@ hr{
   margin-right:40px;
   text-decoration:none;
 }
+/* 메뉴바 커서 대면 효과 */
+.menu_item + .menu_item .menu_link {
+  margin-left: 14px;
+}
 
 
-/* 로그인 회원가입 부분 커서 갖다대면 효과 */
-.log_li:hover .log_link{
-  background-color: skyblue;
-  font-weight: bolder;
+/* 메뉴바 커서 대면 효과 */
+.menu_item:hover .menu_link {
+  font-weight: bold;
+  border-color: #454545;
+
+}
+
+
+/* 메뉴바 커서 대면 효과 */
+.menu_item:hover .yellow {
+  background-color: gray;
+
+}
+/* 컨텐츠 전체 틀 */
+fieldset{
+  border-color: orange;
+  border-width: 10px;
+  margin-top: 40px;
+
+}
+/* 컨텐츠의 표부분 */
+table{
+  
+  margin: 0px auto;
+  text-align: center;
+  font-size: 15px;
+  width: 100%;
+  
   
 }
-
-
-.menu_item + .menu_item .menu_link {
-    margin-left: 14px;
+/* 선 그은 부분 */
+hr{
+   
+  border: solid 2px;
+}
+/* 제목, 작성일, 추천수 */
+th{
+  border-bottom:solid 1px;
 }
 
 
 
-.menu_item:hover .menu_link {
-    font-weight: bold;
-    border-color: #454545;
-
-}
 
 
 
-.menu_item:hover .yellow {
-    background-color: gray;
-
-}
 
 
-
+/* footer */
 
 footer{
   position: relative;
@@ -145,30 +204,3 @@ address{
 }
 
 
-th{
-    border-bottom:solid 1px;
-}
-table{
-    
-    margin: 0px auto;
-    text-align: center;
-    font-size: 15px;
-    width: 100%;
-    
-    
-}
-/* td{
-    border-bottom: solid 1px;
-    
-    border-left: solid 1px;
-    border-right: solid 1px;
-} */
-
-
-
-fieldset{
-    border-color: orange;
-    border-width: 10px;
-    margin-top: 40px;
-  
-  }
