--- a/project_main/css/my_info.css
+++ b/project_main/css/my_info.css
@@ -1,12 +1,11 @@
 
 @charset "UTF-8";
 
-/* header */
+/* 헤더부분 reco이름부분 */
 header{
   font-family: "나눔고딕", NanumGothic,Dotum,"돋음",sans-serif;
 }
-
-
+/* reco부분 감싸고 있는 박스와 메뉴바부분*/
 .headerbox,.menu,.menu_item{
   margin:0;
   padding:0;
@@ -17,13 +16,14 @@ header{
   text-decoration: none;
 }
 
+
 /* reco를 감싸고 있는 오렌지색 박스 부분 */
 .headerbox{
   background-color: orange;
   height:120px;
-  /* text-align: center;
-  margin: 0 auto;
-   */
+  /* margin:0 auto; */
+ /* text-align: center; */
+  
   
 }
 /* reco 있는 부분  */
@@ -38,13 +38,16 @@ header{
   text-align: center;
   
 }
+
+/* 로그인 고객센터 버튼 있는 곳 감싸는 태그 */
 .login_item{
   position: absolute;
-  top: 0.03px; 
+  top: 20px; 
   right: 1%;
   
   padding-right: 0.05px;
 }
+/* 로그인 회원 가입 버튼 있는 곳 감싸는 ul태그  */
 .login{
   list-style:none;
   margin:0;
@@ -52,29 +55,59 @@ header{
   display: table;
   text-decoration: none;
 }
+
+/* 로그인 회원 가입 각 버튼  */
 .log_link{
   text-decoration: none;
   color: #000;
   font-weight: bold;
   
 }
+
+.log_link1{
+  text-decoration: none;
+  
+  /* color: aqua; */
+  color: rgb(78, 67, 67);
+  font-weight: bold;
+
+}
+
 .login li{
   display: table-cell;
   padding-right: 30px;
   
   
 }
+/* 로그인 회원가입 부분 커서 갖다대면 효과 */
+.log_li:hover .log_link{
+  background-color: skyblue;
+  font-weight: bolder;
+  
+}
+
+.log_li:hover .log_link1 {
+  
+  background-color: aqua;
+  font-weight: bolder;
+  
+}
+
+
 .link{
   text-decoration: none;
   color: #000;
 }
+/* movie food 등 메뉴바  */
+
+/* 메뉴바 회색부분  */
 
 .wrap{
   max-width:2000px;
   margin:14px;
   margin:0 auto;
   background-color: lightgray;
-  
+  display: block;
 
 }
 .menu{
@@ -85,7 +118,7 @@ header{
   width:1080px;
 
 }
-
+/* 메뉴와 관련 */
 .menu_item{
   display: table-cell;
   list-style:none;
@@ -105,11 +138,15 @@ header{
 }
 
 
-/* 로그인 회원가입 부분 커서 갖다대면 효과 */
-.log_li:hover .log_link{
-  background-color: skyblue;
-  font-weight: bolder;
-  
+
+
+/* 메뉴와 관련 */
+
+
+.menu_item{
+  display: table-cell;
+  list-style:none;
+ 
 }
 
 .menu_item + .menu_item .menu_link {
@@ -117,30 +154,24 @@ header{
 }
 
 
-
-.menu_item:hover .menu_link {
+/* 메뉴바 커서 대면 효과 */
+.menu_item:hover .menu_link { 
     font-weight: bold;
     border-color: #454545;
 
 }
 
-
-
+section{
+  margin: 0 auto;
+}
+/* 메뉴바 커서 대면 효과 */
 .menu_item:hover .yellow {
     background-color: gray;
 
 }
 
 
-input{
-  text-align: center;
-}
-
-
-input{
-  background-color: lightgray;
-}
-
+/* 전체 감싼 부분 */
 fieldset{
   border-color: orange;
   border-width: 10px;
@@ -172,16 +203,15 @@ div
   font-size: 30px;
   
 }
-/* h1{
-  text-align: center;
-} */
 
+/* footer부분 */
 footer{
   position: relative;
   width:100%;
   text-align:center;
-  margin-bottom:30px;
-  margin-top: 30px;
+  /* margin-bottom:30px;
+  margin-top: 30px; */
+  margin: 0 auto;
 }
 address{
   color:gray;
