--- a/project_main/css/notice_content.css
+++ b/project_main/css/notice_content.css
@@ -3,6 +3,7 @@
 header{
   font-family: "나눔고딕", NanumGothic,Dotum,"돋음",sans-serif;
 }
+/* reco부분 감싸고 있는 박스와 메뉴바부분*/
 .headerbox,.menu,.menu_item{
   margin:0;
   padding:0;
@@ -12,14 +13,14 @@ header{
   color: inherit;
   text-decoration: none;
 }
+
+/* reco를 감싸고 있는 오렌지색 박스 부분 */
 .headerbox{
   background-color: orange;
   height:120px;
-  /* margin:0 auto; */
- /* text-align: center; */
-  
   
 }
+/* reco 있는 부분  */
 .headertext
 {
   width:1080px;
@@ -30,6 +31,10 @@ header{
   margin: 0 auto;
   text-align: center;
   
+}
+.link{
+  text-decoration: none;
+  color: #000;
 }
 
 /* 로그인 고객센터 버튼 있는 곳  */
@@ -53,16 +58,22 @@ header{
   font-weight: bold;
   
 }
+
+.log_link1{
+  text-decoration: none;
+  
+  /* color: aqua; */
+  color: rgb(78, 67, 67);
+  font-weight: bold;
+
+}
 .login li{
   display: table-cell;
   padding-right: 30px;
   
   
 }
-.link{
-  text-decoration: none;
-  color: #000;
-}
+
 
 
 .wrap{
@@ -101,11 +112,20 @@ header{
 }
 
 
-.log li:hover .log_link{
-  font-weight: bold;
-  border-color: red;
-  
 
+
+/* 로그인 회원가입 부분 커서 갖다대면 효과 */
+.log_li:hover .log_link{
+  background-color: skyblue;
+  font-weight: bolder;
+  
+}
+
+.log_li:hover .log_link1 {
+  
+  background-color: aqua;
+  font-weight: bolder;
+  
 }
 
 /* 메뉴와 관련 */
@@ -134,13 +154,15 @@ header{
 .container{
    
   display: block;
-  width: 100%;
-  margin: -100 auto;
-  min-height: 100%;
-  padding: 50px 0;
-  box-sizing: border-box;
+  width: 90%;
+  
+  margin: 0 auto;
+  /* box-sizing: border-box; */
   position: relative;
-     
+  height: 120vh;
+  border-left: 5px dotted orange;
+  border-right: 5px dotted orange;
+  padding-top: 40px;
      
     
 }
@@ -161,13 +183,12 @@ header{
 
 }
 .contents{
-  float: left;
-  /* height: 300px%; */
-  width: 89%;
+  width: 80%;
   background-color: #fff;
-  border-left: 5px dotted orange;
-  height: 140vh;
+  
+  height: 100vh;
   box-sizing: border-box;
+  margin: 0 auto;
   
   
 }
@@ -177,63 +198,8 @@ header{
   content: '';
 }
 
-.aside{
- 
-  float: left;
-  width: 11%;
-  background-color: cornsilk;
-  /* height: 100%; */
-  height: 140vh;
-  
- 
-  
 
 
-}
-
-h2{
-  text-align: center;
-}
-
-/* 옆의 메뉴 ui */
-.aisde_menu{
-  list-style:none;
-  text-decoration: none;
-  /* padding-right: 20px; */
-  padding: 20px;
-}
-/* 옆의 메뉴 li */
-.aside_in_menu{
-  border:5px solid lightseagreen;
-  /* padding-left: 10px;
-  padding-right: 10px; */
-  border-radius: 20px;
-  margin-bottom: 70px;
-  font-size: 14px;
-  padding: 17px 18px 16px 18px;
-  cursor: pointer;
-  text-align: -webkit-match-parent;
- 
-}
-.aside_in_menu>a:-webkit-any-link {
-  border: 1px none black; 
-  color: black;
-  text-decoration: none; 
-  font-weight: bolder;
-}
-
-
-.aside_in_menu:hover .aside_button{
-  color:  brown;
-  font-weight: bolder;
-}
-
-/* 로그인 회원가입 부분 커서 갖다대면 효과 */
-.log_li:hover .log_link{
-  background-color: skyblue;
-  font-weight: bolder;
-  
-}
 
 
 
@@ -258,14 +224,7 @@ h2{
   height: 90vh;
 
 }
-/* table{
-  border:1px solid gray;
-    
-  margin:0 auto;
-  text-align: center;
-  width: 100%;
-  font-size: 20px;
-} */
+
 
 td{
     border-top: 1px solid lightgray;
@@ -281,7 +240,7 @@ td{
   .com_menu{
     display: table;
     table-layout:fixed;
-    /* width:100%; */
+    
     list-style:none;
     width:1080px;
   
@@ -294,18 +253,12 @@ td{
   }
 
 
-/* .button{
-  font-size: 40px;
-} */
-/* .community_button{
-  margin: 0px;
-} */
 #total{
   margin-left: 4px;
   font-size: 20px;
   width:25%;
   margin-right: -4px;
-  /* padding: 0px; */
+  
 }
 #chat{
   width:25%;
@@ -347,17 +300,13 @@ footer{
   position: relative;
   width:100%;
   text-align:center;
-  margin-bottom:10px;
-  margin-top: 30px;
+
+  margin: 0 auto;
 }
 address{
   color:gray;
   font-style: normal;
 }
 
-/* 위쪽은 캘린더와 동일  */
-html,body, section{
-    height: 100%;
 
-} 
 
