--- a/project_main/css/notice_write.css
+++ b/project_main/css/notice_write.css
@@ -3,6 +3,7 @@
 header{
   font-family: "나눔고딕", NanumGothic,Dotum,"돋음",sans-serif;
 }
+/* reco부분 감싸고 있는 박스와 메뉴바부분*/
 .headerbox,.menu,.menu_item{
   margin:0;
   padding:0;
@@ -12,6 +13,9 @@ header{
   color: inherit;
   text-decoration: none;
 }
+
+
+/* reco를 감싸고 있는 오렌지색 박스 부분 */
 .headerbox{
   background-color: orange;
   height:120px;
@@ -20,6 +24,7 @@ header{
   
   
 }
+/* reco 있는 부분  */
 .headertext
 {
   width:1080px;
@@ -32,7 +37,7 @@ header{
   
 }
 
-/* 로그인 고객센터 버튼 있는 곳  */
+/* 로그인 고객센터 버튼 있는 곳 감싸는 태그 */
 .login_item{
   position: absolute;
   top: 20px; 
@@ -40,6 +45,7 @@ header{
   
   padding-right: 0.05px;
 }
+/* 로그인 회원 가입 버튼 있는 곳 감싸는 ul태그  */
 .login{
   list-style:none;
   margin:0;
@@ -47,23 +53,52 @@ header{
   display: table;
   text-decoration: none;
 }
+
+/* 로그인 회원 가입 각 버튼  */
 .log_link{
   text-decoration: none;
   color: #000;
   font-weight: bold;
   
 }
+
+.log_link1{
+  text-decoration: none;
+  
+  /* color: aqua; */
+  color: rgb(78, 67, 67);
+  font-weight: bold;
+
+}
+
 .login li{
   display: table-cell;
   padding-right: 30px;
   
   
 }
+/* 로그인 회원가입 부분 커서 갖다대면 효과 */
+.log_li:hover .log_link{
+  background-color: skyblue;
+  font-weight: bolder;
+  
+}
+
+.log_li:hover .log_link1 {
+  
+  background-color: aqua;
+  font-weight: bolder;
+  
+}
+
+
 .link{
   text-decoration: none;
   color: #000;
 }
+/* movie food 등 메뉴바  */
 
+/* 메뉴바 회색부분  */
 
 .wrap{
   max-width:2000px;
@@ -81,7 +116,7 @@ header{
   width:1080px;
 
 }
-
+/* 메뉴와 관련 */
 .menu_item{
   display: table-cell;
   list-style:none;
@@ -101,48 +136,49 @@ header{
 }
 
 
-/* 로그인 회원가입 부분 커서 갖다대면 효과 */
-.log_li:hover .log_link{
-  background-color: skyblue;
-  font-weight: bolder;
-  
-}
+
 
 /* 메뉴와 관련 */
+
+
+.menu_item{
+  display: table-cell;
+  list-style:none;
+ 
+}
+
 .menu_item + .menu_item .menu_link {
     margin-left: 14px;
 }
 
 
-
-.menu_item:hover .menu_link {
+/* 메뉴바 커서 대면 효과 */
+.menu_item:hover .menu_link { 
     font-weight: bold;
     border-color: #454545;
 
 }
 
 
-
+/* 메뉴바 커서 대면 효과 */
 .menu_item:hover .yellow {
     background-color: gray;
 
 }
 
-
-
+/* 오른쪽에 있는 컨텐츠 부분 감싸는 태그 */
 
 .container{
    
   display: block;
-  width: 100%;
-  margin: -100 auto;
-  min-height: 100%;
-  padding: 50px 0;
-  box-sizing: border-box;
+  width: 90%;
+  
+  margin: 0 auto;
+  /* box-sizing: border-box; */
   position: relative;
-     
-     
-    
+  height: 120vh;
+  border-left: 5px dotted orange;
+  border-right: 5px dotted orange;
 }
 .container:after{
     display: block;
@@ -154,20 +190,16 @@ header{
     bottom: 100px;
     right: 100px;
 }
-.wrap_div:after{
-    display: block;
-    clear: both;
-    content: "";
 
-}
+
+/* 컨텐츠의 오른쪽부분  */
 .contents{
-  float: left;
-  /* height: 300px%; */
-  width: 89%;
+  width: 90%;
   background-color: #fff;
-  border-left: 5px dotted orange;
-  height: 120vh;
+  
+  height: 100vh;
   box-sizing: border-box;
+  margin: 0 auto;
   
   
 }
@@ -177,106 +209,10 @@ header{
   content: '';
 }
 
-.aside{
- 
-  float: left;
-  width: 11%;
-  background-color: cornsilk;
-  /* height: 100%; */
-  height: 120vh;
+
   
  
-  
-
-
-}
-
-h2{
-  text-align: center;
-}
-
-/* 옆의 메뉴 ui */
-.aisde_menu{
-  list-style:none;
-  text-decoration: none;
-  /* padding-right: 20px; */
-  padding: 20px;
-}
-/* 옆의 메뉴 li */
-.aside_in_menu{
-  border:5px solid lightseagreen;
-  /* padding-left: 10px;
-  padding-right: 10px; */
-  border-radius: 20px;
-  margin-bottom: 70px;
-  font-size: 14px;
-  padding: 17px 18px 16px 18px;
-  cursor: pointer;
-  text-align: -webkit-match-parent;
- 
-}
-.aside_in_menu>a:-webkit-any-link {
-  border: 1px none black; 
-  color: black;
-  text-decoration: none; 
-  font-weight: bolder;
-}
-
-
-
-
-.aside_in_menu:hover .aside_button{
-  color:  brown;
-  font-weight: bolder;
-}
-
-
-.contents_info{
-  border:1px solid gray;
-    
-  margin:0 auto;
-  text-align: center;
-  width: 100%;
-  font-size: 20px;
-  text-align: center;
-
-}
-
-.community_contents{
-  border:1px solid gray;
-    
-  margin:0 auto;
-  text-align: center;
-  width: 100%;
-  font-size: 20px;
-
-}
-
-
-
-.menu_wrap{
-    max-width:2000px;
-    margin:200px;
-    margin:0 auto;
-    background-color: lightgray;
-    display: block;
-  
-  }
-  .com_menu{
-    display: table;
-    table-layout:fixed;
-    /* width:100%; */
-    list-style:none;
-    width:1080px;
-  
-  }
-  
-  .menu_item{
-    display: table-cell;
-    list-style:none;
-   
-  }
-
+/* 글쓰는 부분과 글 폰트 등 변경란이라고 쓴 곳 감싼 태그 */
 .contents_fieldset{
     margin-top: 40px;
    
@@ -288,6 +224,7 @@ h2{
 fieldset{
     width: 80%;
    margin-left: 15px;
+   margin-top: 40px;
    
   }
   
@@ -295,7 +232,7 @@ fieldset{
 
   /* 첨부파일 */
   .attch{
-    margin-left: 1000px;
+    margin-left: 900px;
     margin-top: 10px;
 }
   /* 등록/수정버튼 */
@@ -305,11 +242,11 @@ fieldset{
       margin-top: 0.05px;
       
   }
-  
+/* 등록버튼 */
 #submit {
     margin-right:10px;
 }  
-
+/* 수정버튼 */
 #fix{
     margin-right:10px;
 }
@@ -332,11 +269,6 @@ address{
   font-style: normal;
 }
 
-/* 위쪽은 캘린더와 동일  */
-html,body, section{
-    height: 100%;
-
-} 
 
 
 
