--- a/project_main/css/signup.css
+++ b/project_main/css/signup.css
@@ -1,33 +1,33 @@
 
-
+/* 전체 테두리 */
 fieldset{
     margin: 0px auto;
 }
 
+/* 이메일 비밀번호 입력란 */
+input{
+  text-align: center;
+}
+/* 버튼 감싸는 태그 */
+.button1{
+  margin-top: 10px;
 
-  
+}
+
+/* 버튼 */
 div>button{
   border-radius:20%;
   width: 110px;
   background-color: rgb(14, 135, 235);
 }
-.button1{
-  margin-top: 10px;
 
-}
-/* .button1{
-    /* text-align: center; */
-    /* border-radius: 20px; ;
-    
-} */ 
 
+/* a herf 밑줄 제거 */
 a{
   text-decoration: none;
 }
 
-input{
-  text-align: center;
-}
+
 
 /* footer부분 css  */
 footer{
