--- a/src/main/webapp/css/header.css
+++ b/src/main/webapp/css/header.css
@@ -7,14 +7,21 @@ header{
    height: 150px;
 }
 
-header>h1.logo>a{
-	width: 200px;
+header>h1{
+    width: 200px;
     height: 100px;
     float:left;
-    font-size: 100px;
-    text-align:center;
-    padding-left:45%;
-    text-decoration: none; 
+    display:block;
+}
+
+header>h1.logo>a{
+	background-image: url(../images/logo-removebg-preview.png);
+	background-repeat: no-repeat;
+	display:block;
+	width: 100%;
+    height: 100%;
+    overflow: hidden;  
+    text-indent: -20000px;
 }
   
   
@@ -22,26 +29,25 @@ header>nav{
     margin: 0px auto;
     padding-right:1%;
     float:right;
-    font-weight: bold;
+    font-weight: bolder;
 }
 
-header>nav>ul>li>a:hover{
-	font-weight: bolder;
-}
 
 header>nav>ul{
     list-style-type: none;
     padding-left: 0px;
 }
+
 header>nav>ul>li{
     display: inline-block;
    /*  width:100px; */
     text-align: center;
 }
+
 header>nav>ul>li>a{
     text-decoration: none;
+    font-size: 20px;
 }
-
   
 
 
