--- a/src/main/webapp/css/tab.css
+++ b/src/main/webapp/css/tab.css
@@ -14,6 +14,9 @@ div.tab>ul{
   	table-layout:fixed;
  	list-style:none;
 }
+div.tab>ul.communitytab{
+	display:none;
+}
 div.tab>ul>li{
     display: table-cell;
     text-align: center;
