--- a/src/main/webapp/css/signup.css
+++ b/src/main/webapp/css/signup.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
 div.signup>form>button[type=submit]{
-    /* display:none; */
-    visibility: hidden; 
+     display:none; 
+   /* visibility: hidden; */
 }
