--- a/src/main/webapp/css/footer.css
+++ b/src/main/webapp/css/footer.css
@@ -2,7 +2,8 @@
 @import url("base.css");
 /* footer부분 */
 footer{
-  position: relative;
+  font-size:20px;
+  background-color:darkgray;
   width:100%;
   text-align:center;
   /* margin-bottom:30px;
@@ -10,6 +11,7 @@ footer{
   margin: 0 auto;
 }
 address{
-  color:gray;
+  color:black;
   font-style: normal;
+  
 }
