--- a/src/main/webapp/css/noticelist.css
+++ b/src/main/webapp/css/noticelist.css
@@ -39,6 +39,21 @@ div.container>h1{
 	margin-top: 5%;
 }
 
+/*글쓰기 버튼*/
+div.container>div.write_button{
+	border:1px black solid;
+	width:7%;
+	height:4%;
+	margin-left:80%;
+	margin-top: 3%;
+	text-align:center;
+	
+}
+
+a{
+	text-decoration:none;
+	font-weight:bold;
+}
 /* 공지사항 상단 */
 div.container>div.ntc_list>ul.ntc_top{
  border:1px solid gray;
