--- a/src/main/webapp/css/login.css
+++ b/src/main/webapp/css/login.css
@@ -1,6 +1,53 @@
 @charset "UTF-8";
 @import url("base.css");
 
+/* 전체 테두리 */
+fieldset{
+  margin: 0px auto;
+}
+
+/* 이메일 비밀번호 입력란 */
+input{
+  text-align: center;
+}
+
+/* 버튼 감싸는 태그 */
+.button1{
+  margin-top: 10px;
+  
+}
+
+/* 버튼 */
+div>button{
+  border-radius:20%;
+  width: 180px;
+  font-size: 15px;
+  color: white;
+  background-color: rgb(14, 135, 235);
+}
+
+/* a herf 밑줄 제거 */
+a{
+  text-decoration-line: none;
+  color: black;
+}
+/* 비밀번호찾기와 로그인 감싸는 태그 */
+.link1{
+  text-decoration:none;
+  font-size: 14px;
+} 
+/* 비밀번호 찾기 버튼 */
+#password_btn{
+  margin-left: 50px;
+
+}
+/* 회원가입 버튼 */
+#signup_btn{  
+  
+  margin-left: 60px;
+}
+
+
 div.login {
      border-radius: 5px;
      background-color: #f2f2f2;
