--- a/src/main/webapp/css/before.css
+++ b/src/main/webapp/css/before.css
@@ -16,8 +16,8 @@ fieldset{
   padding-top: 60px;
   margin: 0 auto;
   height:50%;
-  border-left: 5px dotted orange;
-  border-right: 5px dotted orange;     
+/*   border-left: 5px dotted orange;
+  border-right: 5px dotted orange;  */    
 }
 
 
