--- a/src/main/webapp/css/boardlist.css
+++ b/src/main/webapp/css/boardlist.css
@@ -42,10 +42,10 @@ div.container>h1{
 /*글쓰기 버튼*/
 .board_write_button{
 	border:1px black solid;
-	width:6%;
+	width:10%;
 	height:3%;
-	margin-left:80%;
-	margin-top: 3%;
+	margin-left:0;
+	margin-top: 0%;
 	text-align:center;
 	
 }
