--- a/src/main/webapp/css/noticelist.css
+++ b/src/main/webapp/css/noticelist.css
@@ -101,3 +101,7 @@ div.container>div.ntc_list>div>ul>li span{
 	white-space: nowrap;
 	overflow: hidden;
 }
+
+div.container>div.ntc_list>div.notice_write_button>label{
+	border:1px solid black;
+}
