--- a/src/main/webapp/css/board_content.css
+++ b/src/main/webapp/css/board_content.css
@@ -44,7 +44,8 @@
 }
 .comment_content_button {
   position: relative;
-  right: 100px;
+  left: 420px;
+  margin-top: 5px;
 
 }
 .comment_add{
@@ -56,8 +57,8 @@
 /* comment size 댓글수 있는 곳 */
 .size{
   position: relative;
-  top:40px;
-  left: -200px;
+  top:10px;
+  left: 10px;
  }
 /* 댓글란 textarea 감싼 div */
 .textarea{
@@ -75,8 +76,19 @@ textarea{
 /* 댓글부분  */
 .community_comment{
   margin: 0 auto;
-  width: 300px;
-  border:1px solid black;
+  width: 1000px;
+  border:1px dotted gold;
   /* padding-bottom: 2px; */
   padding-bottom: 0.1px;
+  background-color: lightblue;
+  height: 100px;
 }
+
+.cmt{
+  position: relative;
+  float: left;
+  font-size: 12px;
+  margin-right: 5px;
+
+}
+
