--- a/src/main/webapp/css/noticedetail.css
+++ b/src/main/webapp/css/noticedetail.css
@@ -1,16 +1,26 @@
 @charset "UTF-8";
 
 div.ntcDetail{
-	margin:40px;
+	/* margin:40px; */
+	margin: 0 auto;
+	
+	width: 1400px;
+	display: block;
+	border-left: 5px dotted orange;
+  	border-right: 5px dotted orange;	
+	height: 100%;
 }
 h1{
 	font-size: 20px;
+	margin-left: 205px;
 }
 ul.ntcDetail{
      list-style-type: none;
-     padding-left: 0px;
+     /* padding-left: 0px; */
      border:1px #77af9c solid;
      width:70%;
+	 margin: 0 auto;
+	/* text-align: center; */
  }
  
  
