--- a/src/main/webapp/css/noticedetail.css
+++ b/src/main/webapp/css/noticedetail.css
@@ -47,6 +47,8 @@ div.ntcDetail>div.NoticeDetailButton>button{
 	 border: 2px solid #77af9c;
 	 padding:10px;
 	 margin:10px;
+	 position: relative;
+	 left: 153px;
 }
 
 div.ntcDetail>div.NoticeDetailButton>button:hover{
