--- a/src/main/webapp/css/noticelist.css
+++ b/src/main/webapp/css/noticelist.css
@@ -1,5 +1,12 @@
 @charset "UTF-8";
 
+.wrap{
+  height: 100%;
+  border-left: 5px dotted orange;
+  border-right: 5px dotted orange;
+  width: 90%;
+  margin: 0 auto;
+}
 .container{
    
   display: block;
@@ -8,9 +15,7 @@
   margin: 0 auto;
  
   position: relative;
-  height: 140vh;
-  border-left: 5px dotted orange;
-  border-right: 5px dotted orange;
+  
       
 }
 
@@ -105,3 +110,4 @@ div.container>div.ntc_list>div>ul>li span{
 div.container>div.ntc_list>div.notice_write_button>label{
 	border:1px solid black;
 }
+
