검색창 위치 조정

--- a/src/main/webapp/css/noticelist.css
+++ b/src/main/webapp/css/noticelist.css
@@ -114,3 +114,9 @@ div.container>div.ntc_list>div.notice_write_button>label{
 	border:1px solid black;
 }
 
+.search{
+  margin-top: 30px;
+  /* float: right; */
+  margin-left: 900px;
+
+}
