--- a/src/main/webapp/css/noticelist.css
+++ b/src/main/webapp/css/noticelist.css
@@ -38,6 +38,15 @@ div.container>h1{
 
 }
 
+/* 검색창  */
+.search{
+  margin-top: 30px;
+  /* float: right; */
+  margin-left: 900px;
+
+}
+
+
 /*공지사항 리스트 전체*/
 .ntc_list{
 	width:80%;
@@ -112,11 +121,4 @@ div.container>div.ntc_list>div>ul>li span{
 
 div.container>div.ntc_list>div.notice_write_button>label{
 	border:1px solid black;
-}
-
-.search{
-  margin-top: 30px;
-  /* float: right; */
-  margin-left: 900px;
-
 }
