--- a/src/main/webapp/css/board_content.css
+++ b/src/main/webapp/css/board_content.css
@@ -76,6 +76,9 @@ div.brdDetail>div.BoardDetailButton>button:hover{
      font-weight: bold;
 }
 
-div.community_comment>div.comment_modify_input{
+
+div.community_comment>div.comment_modify_input>input{
 	display:none;
 }
+
+
