--- a/src/main/webapp/css/board_content.css
+++ b/src/main/webapp/css/board_content.css
@@ -77,8 +77,10 @@ div.brdDetail>div.BoardDetailButton>button:hover{
 }
 
 
-div.community_comment>div.comment_modify_input>input{
+div.community_comment>div.comment_modify_input{
 	display:none;
 }
+
+div.
 
 
