댓글인덱스 숨기기

--- a/src/main/webapp/css/board_content.css
+++ b/src/main/webapp/css/board_content.css
@@ -88,4 +88,7 @@ div.community_comment>form>div.comment_comment_input{
 	display:none;
 }
 
+div.community_comment>span.cmt{
+	visibility:hidden;
+}
 
