--- a/src/main/webapp/css/tab.css
+++ b/src/main/webapp/css/tab.css
@@ -2,8 +2,7 @@
 
 
 div.tab{
-	background-color: lightgray;
-	list-style-type: none;
+	background-color: rgb(240, 225, 204);
     display:block;
 }
 
